learn_docker/Kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoapp
  labels:
    app: todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoapp
  template:
    metadata:
      labels:
        app: todoapp
    spec:
      containers:
      - name: mytodoapp
        image: georgeao/mytodoapp:latest
        ports:
        - containerPort: 3000
