learn_docker/Kubernetes/ingress-rule.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - clone.georgeoademo.com.ng
    - todoapp.georgeoademo.com.ng
    secretName: mytestapps-tls
  rules:
  - host: clone.georgeoademo.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix-app
            port:
              number: 80
  - host: todoapp.georgeoademo.com.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: todoapp-service
            port:
              number: 3000
